k8s/backend/backend-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: code-analyzer
spec:
  podSelector:
    matchLabels:
      app: flask-notes
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: notes-frontend
      ports:
        - protocol: TCP
          port: 5000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: notes-frontend
      ports:
        - protocol: TCP
          port: 5000
